# usb-enum

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  install.js  package.json
.github/workflows/: CI.yaml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  list.rs  utils.rs  watch.rs
