cargo-features = ["strip"]

[package]
authors = ["Tim Fish <tim@timfish.uk>"]
edition = "2018"
name = "usb-enum"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {git = "https://github.com/napi-rs/napi-rs.git", features = ["async", "serde-json", "napi5"]}
napi-derive = {git = "https://github.com/napi-rs/napi-rs.git"}
serde = {version = "1.0", features = ["derive"]}
usb_enumeration = "0.1"

[build-dependencies]
napi-build = "1"

[profile.release]
codegen-units = 1
lto = true
strip = 'symbols'
